[FIX] web,mail: correspondent can be null
Correspondent in thread can be null and lead into crash
when getting thread action and im status.

Replace correspondent with chatPartner when type is chat.

The fix is to solve the problem so that it is not blocking
systray and chatWindow tests related.

Also, this fix small issue of systray overflowing issue.

closes odoo/odoo#138913

--- a/addons/web/static/src/scss/primary_variables.scss
+++ b/addons/web/static/src/scss/primary_variables.scss
@@ -186,6 +186,7 @@ $o-horizontal-padding: $o-spacer !default;
 $o-innergroup-rpadding: 45px !default;
 $o-dropdown-hpadding: 20px !default;
 $o-dropdown-vpadding: 3px !default;
+$o-dropdown-max-height: 70vh !default;
 
 $o-statbutton-height: 44px !default;
 $o-statbutton-vpadding: 0px !default;
